--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ fft/pretrained_models/5stems/model.data-00000-of-00001
 fft/pretrained_models/5stems/model.index
 fft/pretrained_models/5stems/model.meta
 fft/temp0.wav
+fft/.idea/workspace.xml
