--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ fft/pretrained_models/5stems/model.index
 fft/pretrained_models/5stems/model.meta
 fft/temp0.wav
 fft/.idea/workspace.xml
+fft/wavs/youandme.wav
