Reverting to original

--- a/.gitignore
+++ b/.gitignore
@@ -1,95 +1,33 @@
 
-fft/pretrained_models/4stems/._checkpoint
-fft/pretrained_models/4stems/.probe
-fft/pretrained_models/4stems/checkpoint
-fft/pretrained_models/4stems/model.data-00000-of-00001
-fft/pretrained_models/4stems/model.index
-fft/pretrained_models/4stems/model.meta
-fft/pretrained_models/5stems/._checkpoint
-fft/pretrained_models/5stems/.probe
-fft/pretrained_models/5stems/checkpoint
-fft/pretrained_models/5stems/model.data-00000-of-00001
-fft/pretrained_models/5stems/model.index
-fft/pretrained_models/5stems/model.meta
-fft/temp0.wav
-fft/wavs/youandme.wav
-fft/wavs/temp9.wav
-fft/wavs/temp8.wav
-fft/wavs/temp7.wav
-fft/wavs/temp6.wav
-fft/wavs/temp5.wav
-fft/wavs/temp4.wav
-fft/wavs/temp3.wav
-fft/wavs/temp2.wav
-fft/wavs/temp1.wav
+fft/.idea/workspace.xml
 fft/wavs/temp0.wav
 fft/wavs/temp.wav
 fft/wavs/splitoutput/temp0/vocals.wav
 fft/wavs/splitoutput/temp0/other.wav
 fft/wavs/splitoutput/temp0/drums.wav
 fft/wavs/splitoutput/temp0/bass.wav
-fft/wavs/redeye.wav
-fft/wavs/logic.wav
-fft/wavs/letgo.wav
-fft/wavs/honey.wav
-fft/wavs/brokenbiches (1).wav
-fft/wavs/420.wav
-fft/wavs/1.wav
-fft/wavs/0.wav
-fft/Thumbs.db
-fft/temp.wav
-fft/spectrograms/specc.png
-fft/spectrograms/spec.png
-fft/peaks/Thumbs.db
+fft/temp0.wav
+fft/pretrained_models/5stems/model.meta
+fft/pretrained_models/5stems/model.index
+fft/pretrained_models/5stems/model.data-00000-of-00001
+fft/pretrained_models/5stems/checkpoint
+fft/pretrained_models/5stems/.probe
+fft/pretrained_models/5stems/._checkpoint
+fft/pretrained_models/4stems/model.meta
+fft/pretrained_models/4stems/model.index
+fft/pretrained_models/4stems/model.data-00000-of-00001
+fft/pretrained_models/4stems/checkpoint
+fft/pretrained_models/4stems/.probe
+fft/pretrained_models/4stems/._checkpoint
 fft/peaks/peaksSnare.png
 fft/peaks/peaksBass.png
-fft/finalKidLaroi3.mp3
-fft/ffprobe.exe
-fft/ffplay.exe
-fft/ffmpeg.exe
-fft/ffmpeg-4.3.2-2021-02-02-full_build/README.txt
-fft/ffmpeg-4.3.2-2021-02-02-full_build/presets/libvpx-720p50_60.ffpreset
-fft/ffmpeg-4.3.2-2021-02-02-full_build/presets/libvpx-720p.ffpreset
-fft/ffmpeg-4.3.2-2021-02-02-full_build/presets/libvpx-360p.ffpreset
-fft/ffmpeg-4.3.2-2021-02-02-full_build/presets/libvpx-1080p50_60.ffpreset
-fft/ffmpeg-4.3.2-2021-02-02-full_build/presets/libvpx-1080p.ffpreset
-fft/ffmpeg-4.3.2-2021-02-02-full_build/LICENSE
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/style.min.css
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/platform.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/nut.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/mailing-list-faq.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libswscale.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libswresample.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libavutil.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libavformat.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libavfilter.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libavdevice.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/libavcodec.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/git-howto.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/general.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffprobe.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffprobe-all.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffplay.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffplay-all.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-utils.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-scaler.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-resampler.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-protocols.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-formats.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-filters.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-devices.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-codecs.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-bitstream-filters.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/ffmpeg-all.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/fate.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/faq.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/developer.html
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/default.css
-fft/ffmpeg-4.3.2-2021-02-02-full_build/doc/bootstrap.min.css
-fft/ffmpeg-4.3.2-2021-02-02-full_build/bin/ffprobe.exe
-fft/ffmpeg-4.3.2-2021-02-02-full_build/bin/ffplay.exe
-fft/ffmpeg-4.3.2-2021-02-02-full_build/bin/ffmpeg.exe
-fft/__pycache__/graphicize.cpython-37.pyc
-fft/__pycache__/equalizer_bar.cpython-37.pyc
-fft/__pycache__/config.cpython-37.pyc
+fft/wavs/temp0.wav
+fft/wavs/temp.wav
+fft/wavs/splitoutput/temp0/vocals.wav
+fft/wavs/splitoutput/temp0/other.wav
+fft/wavs/splitoutput/temp0/drums.wav
+fft/wavs/splitoutput/temp0/bass.wav
+fft/peaks/peaksSnare.png
+fft/peaks/peaksBass.png
+*.wav
+*.png
